# loony-redis

./: CHANGES.md  Cargo.toml  Install.md  LICENSE  README.md
examples/: basic.rs
src/: client.rs  codec.rs  connector.rs  errors.rs  lib.rs  redis.rs  session.rs  simple.rs
src/cmd/: connection.rs  hashes.rs  keys.rs  lists.rs  utils.rs
tests/: test_redis.rs
