[package]
name = "loony-redis"
version = "0.2.3"
authors = ["loony contributors <team@loony.rs>"]
description = "Redis client"
documentation = "https://docs.rs/loony-redis"
repository = "https://github.com/loony-rs/loony-redis.git"
categories = ["network-programming"]
keywords = ["loony", "redis"]
license = "MIT"
exclude = [".gitignore", ".travis.yml", ".cargo/config"]
edition = "2018"

[features]
default = []

# openssl
openssl = ["loony/openssl"]

# rustls support
rustls = ["loony/rustls"]

[dependencies]
loony = { git="https://github.com/sankar-boro/loony" }
itoa = "0.4.5"
btoi = "0.4.2"
log = "0.4"
derive_more = "0.99"
futures = "0.3.13"

[dev-dependencies]
rand = "0.8"
env_logger = "0.9"
